--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "5.4.1",
+    "version": "5.5.1",
     "name": "react-native-svg",
     "description": "SVG library for react-native",
     "repository": {
@@ -22,8 +22,8 @@
         "lint": "eslint ./"
     },
     "peerDependencies": {
-        "react-native": ">=0.46.0",
-        "react": "16.0.0-alpha.12",
+        "react-native": ">=0.50.0",
+        "react": "*",
         "prop-types": "^15.5.8"
     },
     "dependencies": {
@@ -34,7 +34,8 @@
         "babel-eslint": "^6.1.2",
         "eslint": "^2.13.1",
         "eslint-plugin-react": "^4.3.0",
-        "react-native": "^0.46.0"
+        "react-native": "^0.49.0",
+        "react": "16.0.0-beta.5"
     },
     "nativePackage": true
 }
